end-to-end testing commit

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
       <div class="display1" id="display1">
         <h1 class="display"></h1>
       </div>
-      <button class="operator" value="+">+</button>
-      <button class="operator" value="-">-</button>
-      <button class="operator" value="*">*</button>
-      <button class="operator" value="/">&#247</button>
+      <button class="operator add" value="+">+</button>
+      <button class="operator minus" value="-">-</button>
+      <button class="operator multiply" value="*">*</button>
+      <button class="operator divide" value="/">&#247</button>
       <button class="equal" id="equal">=</button>
-      <button class="button" value="1">1</button>
-      <button class="button" value="2">2</button>
-      <button class="button" value="3">3</button>
+      <button class="button one" value="1">1</button>
+      <button class="button two" value="2">2</button>
+      <button class="button three" value="3">3</button>
       <button class="clear" id="clear">AC</button>
-      <button class="button" value="4">4</button>
-      <button class="button" value="5">5</button>
-      <button class="button" value="6">6</button>
-      <button class="button" value="7">7</button>
-      <button class="button" value="8">8</button>
-      <button class="button" value="9">9</button>
-      <button class="button" value="0">0</button>
+      <button class="button four" value="4">4</button>
+      <button class="button five" value="5">5</button>
+      <button class="button six" value="6">6</button>
+      <button class="button seven" value="7">7</button>
+      <button class="button eight" value="8">8</button>
+      <button class="button nine" value="9">9</button>
+      <button class="button zero" value="0">0</button>
     </div>
   </main>
   <script src="./main.js"></script>
